#############################################################
##                                                         ##
## Copyright (c) 2003-2014 by The University of Queensland ##
## Centre for Geoscience Computing                         ##
## http://earth.uq.edu.au/centre-geoscience-computing      ##
##                                                         ##
## Primary Business: Brisbane, Queensland, Australia       ##
## Licensed under the Open Software License version 3.0    ##
## http://www.opensource.org/licenses/osl-3.0.php          ##
##                                                         ##
#############################################################

##

include $(top_srcdir)/Config/Cpp.am

SUBDIRS = libltdl Foundation ntable tml ppa pis Geometry Model Fields Parallel Tools Python Doc/Tutorial

ACLOCAL_AMFLAGS = -I Config

EXTRA_DIST = Config/pkg.m4 Config/cppunit.m4 Config/libtool.m4

