#############################################################
##                                                         ##
## Copyright (c) 2003-2014 by The University of Queensland ##
## Centre for Geoscience Computing                         ##
## http://earth.uq.edu.au/centre-geoscience-computing      ##
##                                                         ##
## Primary Business: Brisbane, Queensland, Australia       ##
## Licensed under the Open Software License version 3.0    ##
## http://www.opensource.org/licenses/osl-3.0.php          ##
##                                                         ##
#############################################################

include $(top_srcdir)/Config/Python.am

lsmviscore_PYTHON =        \
    __init__.py            \
    arrow.py               \
    arrowExtractor.py      \
    box.py                 \
    camera.py              \
    capsule.py             \
    color.py               \
    cone.py                \
    cylinder.py            \
    cylinderExtractor.py   \
    edgeData.py            \
    edgeExtractor.py       \
    exception.py           \
    extractor.py           \
    glyphData.py           \
    imageFormat.py         \
    modifier.py            \
    pointExtractor.py      \
    scene.py               \
    sphere.py              \
    sphereExtractor.py     \
    surfaceData.py         \
    triangulatedSurface.py

AM_CPPFLAGS += $(PYTHON_CPPFLAGS)

